[gd_scene load_steps=4 format=2]

[ext_resource path="res://SettingsMenuConfig.gd" type="Script" id=1]
[ext_resource path="res://assets/liberation_serif.tres" type="DynamicFont" id=2]

[sub_resource type="Theme" id=3]
default_font = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_right = 59.0
margin_bottom = 14.0
text = "Player Preferances"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Label"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.5
margin_top = 30.0
margin_right = 77.5
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxDisplayName" type="HBoxContainer" parent="Panel/Label/VBoxContainer"]
margin_right = 157.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="Panel/Label/VBoxContainer/HBoxDisplayName"]
margin_top = 5.0
margin_right = 95.0
margin_bottom = 24.0
text = "Display Name:"

[node name="LineEdit" type="LineEdit" parent="Panel/Label/VBoxContainer/HBoxDisplayName"]
margin_left = 99.0
margin_right = 157.0
margin_bottom = 29.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Label/VBoxContainer"]
margin_top = 33.0
margin_right = 157.0
margin_bottom = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxFontSize" type="HBoxContainer" parent="Panel/Label/VBoxContainer/VBoxContainer"]
margin_right = 157.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/Label/VBoxContainer/VBoxContainer/HBoxFontSize"]
margin_right = 145.0
margin_bottom = 19.0
text = "Risk Factor Threshold:"

[node name="RiskSlider" type="HSlider" parent="Panel/Label/VBoxContainer/VBoxContainer"]
margin_top = 23.0
margin_right = 157.0
margin_bottom = 39.0
min_value = 1.0
max_value = 5.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="Label2" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -47.5
margin_top = 100.0
margin_right = 47.5
margin_bottom = 14.0
text = "Visual Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Label2"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.5
margin_top = 30.0
margin_right = 77.5
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxFontSize" type="HBoxContainer" parent="Panel/Label2/VBoxContainer"]
margin_right = 155.0
margin_bottom = 19.0

[node name="Label" type="Label" parent="Panel/Label2/VBoxContainer/HBoxFontSize"]
margin_right = 64.0
margin_bottom = 19.0
text = "Font Size:"

[node name="HSlider2" type="HSlider" parent="Panel/Label2/VBoxContainer"]
margin_top = 23.0
margin_right = 155.0
margin_bottom = 39.0
min_value = 1.0
max_value = 5.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="Label" type="Label" parent="Panel/Label2/VBoxContainer"]
margin_top = 43.0
margin_right = 155.0
margin_bottom = 62.0
text = "Brightness:"

[node name="HSlider3" type="HSlider" parent="Panel/Label2/VBoxContainer"]
margin_top = 66.0
margin_right = 155.0
margin_bottom = 82.0
min_value = 1.0
max_value = 5.0
value = 5.0
tick_count = 10
ticks_on_borders = true

[node name="Label3" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.5
margin_top = 210.0
margin_right = 52.5
text = "General Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/Label3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -77.5
margin_top = 30.0
margin_right = 77.5
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Label3/VBoxContainer"]
margin_right = 155.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 62, 14 )
text = "Volume:"

[node name="HSlider2" type="HSlider" parent="Panel/Label3/VBoxContainer"]
margin_top = 23.0
margin_right = 155.0
margin_bottom = 39.0
max_value = 10.0
tick_count = 10
ticks_on_borders = true

[node name="HBoxClosedCaptions" type="HBoxContainer" parent="Panel/Label3/VBoxContainer"]
margin_top = 43.0
margin_right = 155.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="Panel/Label3/VBoxContainer/HBoxClosedCaptions"]
margin_top = 4.0
margin_right = 108.0
margin_bottom = 23.0
text = "Closed Captions:"

[node name="CheckBox" type="CheckBox" parent="Panel/Label3/VBoxContainer/HBoxClosedCaptions"]
margin_left = 112.0
margin_right = 136.0
margin_bottom = 27.0

[node name="HBoxDevConsole" type="HBoxContainer" parent="Panel/Label3/VBoxContainer"]
margin_top = 74.0
margin_right = 155.0
margin_bottom = 101.0

[node name="Label" type="Label" parent="Panel/Label3/VBoxContainer/HBoxDevConsole"]
margin_top = 4.0
margin_right = 126.0
margin_bottom = 23.0
text = "Developer Console:"

[node name="CheckBox" type="CheckBox" parent="Panel/Label3/VBoxContainer/HBoxDevConsole"]
margin_left = 130.0
margin_right = 154.0
margin_bottom = 27.0

[node name="HBoxDarkMode" type="HBoxContainer" parent="Panel/Label3/VBoxContainer"]
margin_top = 105.0
margin_right = 155.0
margin_bottom = 132.0

[node name="Label" type="Label" parent="Panel/Label3/VBoxContainer/HBoxDarkMode"]
margin_top = 4.0
margin_right = 77.0
margin_bottom = 23.0
text = "Dark Mode:"

[node name="CheckBox" type="CheckBox" parent="Panel/Label3/VBoxContainer/HBoxDarkMode"]
margin_left = 81.0
margin_right = 105.0
margin_bottom = 27.0

[node name="SaveButton" type="Button" parent="Panel/Label3/VBoxContainer"]
margin_top = 136.0
margin_right = 155.0
margin_bottom = 161.0
text = "Save Settings"
__meta__ = {
"_edit_use_anchors_": false
}
